fix: add padding to help with mouse leave logic
Margins don't count as the element and so there was a mouse leave event
occuring when moving the mouse to the sub navbars. This resulted in the
sub navbar being set to invisible again unless you moved the mouse very
fast.

--- a/assets/sass/header.scss
+++ b/assets/sass/header.scss
@@ -40,6 +40,8 @@
 
     .main-nav {
         display: flex;
+        margin: 0;
+        padding: 20px 0 20px 40px;
 
 
         ul {
